@@ -19,6 +19,7 @@ then
 "Usage: make [option] [package 1] [package 2] [package 3] ...
 
 Options:
+    all             build all available packages
     list            display the list of available packages
     clean           clean up (delete dist/ subdirectory with all files)
     distclean       full clean up (delete dist/ and src/ subdirectories with all files)
@@ -77,7 +78,20 @@ fi
 
 BuildPackages()
 {
-    if [ ! -z "${1}" ]
+    if [ "${1}" = "all" ]
+    then
+        for ARG in $(${0} list)
+        do
+            IsIgnoredPackage "${ARG}" && continue || true
+            if [ -e "${MAIN_DIR}/pkg/${ARG}.sh" ]
+            then
+                . "${MAIN_DIR}/pkg/${ARG}.sh" || exit 1
+            else
+                echo "Package ${ARG} does not exist!"
+                exit 1
+            fi
+        done
+    elif [ ! -z "${1}" ]
     then
         for ARG in ${@}
         do
